Fixes to instrumentation for demo

--- a/examples/ex-optional/CMakeLists.txt
+++ b/examples/ex-optional/CMakeLists.txt
@@ -10,8 +10,25 @@ file(GLOB sources ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.hpp)
 add_executable(ex_optional_on ${sources})
 add_executable(ex_optional_off ${sources})
 
-target_link_libraries(ex_optional_on timemory timemory-mpi)
-target_link_libraries(ex_optional_off timemory-compile-options timemory-mpi)
+target_link_libraries(ex_optional_on timemory)
+target_link_libraries(ex_optional_off timemory-compile-options)
 target_compile_definitions(ex_optional_on PRIVATE USE_TIMEMORY)
 
 install(TARGETS ex_optional_on ex_optional_off DESTINATION bin)
+
+if(TARGET timemory-mpi)
+    set(_MPI timemory-mpi)
+elseif(TARGET timemory::timemory-mpi)
+    set(_MPI timemory::timemory-mpi)
+endif()
+
+if(_MPI)
+    add_executable(ex_optional_on.mpi ${sources})
+    add_executable(ex_optional_off.mpi ${sources})
+
+    target_link_libraries(ex_optional_on.mpi timemory ${_MPI})
+    target_link_libraries(ex_optional_off.mpi timemory-compile-options ${_MPI})
+    target_compile_definitions(ex_optional_on.mpi PRIVATE USE_TIMEMORY)
+
+    install(TARGETS ex_optional_on.mpi ex_optional_off.mpi DESTINATION bin)
+endif()
