--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -48,12 +48,10 @@ install:
           $env:PATH = "C:\Python$env:PYTHON-x64;C:\Python$env:PYTHON-x64\Scripts;C:\Users\appveyor\AppData\Roaming\Python\Python$env:PYTHON\Scripts;$env:PATH"
           $env:CMAKE_PREFIX_PATH = "C:\Python$env:PYTHON-x64;C:\Python$env:PYTHON-x64\Scripts"
           $env:PYTHON_EXE = "C:\Python$env:PYTHON-x64\python.exe"
-          $env:TIMEMORY_USE_MPI = "ON"
         } else {
           $env:PATH = "C:\Python$env:PYTHON;C:\Python$env:PYTHON\Scripts;C:\Users\appveyor\AppData\Roaming\Python\Python$env:PYTHON\Scripts;$env:PATH"
           $env:CMAKE_PREFIX_PATH = "C:\Python$env:PYTHON;C:\Python$env:PYTHON\Scripts"
           $env:PYTHON_EXE = "C:\Python$env:PYTHON\python.exe"
-          $env:TIMEMORY_USE_MPI = "ON"
         }
         python -m pip install --disable-pip-version-check --user --upgrade pip wheel
       } elseif ($env:CONDA) {
@@ -62,20 +60,17 @@ install:
           $env:CMAKE_PREFIX_PATH = "C:\Miniconda$env:CONDA-x64;C:\Miniconda$env:CONDA-x64\Scripts"
           $env:PYTHONHOME = "C:\Miniconda$env:CONDA-x64"
           $env:PYTHON_EXE = "C:\Miniconda$env:CONDA-x64\python.exe"
-          $env:TIMEMORY_USE_MPI = "ON"
         } else {
           $env:PATH = "C:\Miniconda$env:CONDA;C:\Miniconda$env:CONDA\Scripts;$env:PATH"
           $env:CMAKE_PREFIX_PATH = "C:\Miniconda$env:CONDA;C:\Miniconda$env:CONDA\Scripts"
           $env:PYTHONHOME = "C:\Miniconda$env:CONDA"
           $env:PYTHON_EXE = "C:\Miniconda$env:CONDA\python.exe"
-          $env:TIMEMORY_USE_MPI = "OFF"
         }
         conda update -y -q -n base conda
         conda config --add channels conda-forge
         conda install -y -q pip setuptools scikit-build numpy matplotlib pillow
       }
-      # pip installation
-      $env:TIMEMORY_VERBOSE = 2
+      $env:TIMEMORY_FILE_OUTPUT = "OFF"
       mkdir "C:\Users\appveyor\CTestTemp"
       $env:TEMP = "C:\Users\appveyor\CTestTemp"
 
