--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -71,6 +71,7 @@ install:
         conda install -y -q pip setuptools scikit-build numpy matplotlib pillow
       }
       $env:TIMEMORY_FILE_OUTPUT = "OFF"
+      $env:TIMEMORY_AUTO_OUTPUT = "OFF"
       mkdir "C:\Users\appveyor\CTestTemp"
       $env:TEMP = "C:\Users\appveyor\CTestTemp"
 
@@ -91,7 +92,7 @@ build_script:
   - cmake --build . --config "%CONFIG%" --target ALL_BUILD -- /m /v:m /logger:%MSBuildLogger%
   - cmake --build . --config "%CONFIG%" --target INSTALL -- /m /v:m /logger:%MSBuildLogger%
   - ls
-  - .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
+  # - .\outputs\runtime\%CONFIG%\ex_cxx_basic.exe
   - .\outputs\runtime\%CONFIG%\ex_optional_on.exe
   - .\outputs\runtime\%CONFIG%\ex_optional_off.exe
   - .\outputs\runtime\%CONFIG%\ex_cxx_overhead.exe
