--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -38,6 +38,14 @@ using section_map_t   = std::unordered_map<uint64_t, section_entry_t>;
 
 //--------------------------------------------------------------------------------------//
 
+extern "C"
+{
+    extern void timemory_mpip_library_ctor();
+    extern void timemory_ompt_library_ctor();
+}
+
+//--------------------------------------------------------------------------------------//
+
 static uint64_t
 get_unique_id()
 {
@@ -63,14 +71,6 @@ get_profile_map()
     return get_tl_static<profile_map_t>();
 }
 
-//--------------------------------------------------------------------------------------//
-/*
-static section_map_t&
-get_section_map()
-{
-    return get_tl_static<section_map_t>();
-}
-*/
 //--------------------------------------------------------------------------------------//
 
 static profile_stack_t&
@@ -146,6 +146,8 @@ extern "C" void
 kokkosp_init_library(const int loadSeq, const uint64_t interfaceVer,
                      const uint32_t devInfoCount, void* deviceInfo)
 {
+    timemory_ompt_library_ctor();
+
     printf("%s\n", spacer.c_str());
     printf("# KokkosP: timemory Connector (sequence is %d, version: %llu)\n", loadSeq,
            (long long int) interfaceVer);
