--- a/source/tools/timemory-mpip/CMakeLists.txt
+++ b/source/tools/timemory-mpip/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
 
-if(NOT TIMEMORY_BUILD_MPIP OR NOT TIMEMORY_USE_MPI OR NOT TIMEMORY_USE_GOTCHA OR
+if(NOT TIMEMORY_BUILD_MPIP_LIBRARY OR NOT TIMEMORY_USE_MPI OR NOT TIMEMORY_USE_GOTCHA OR
     NOT TARGET timemory-cxx-shared OR TIMEMORY_SKIP_BUILD)
     return()
 endif()
