Minor cmake updates

--- a/source/tools/CMakeLists.txt
+++ b/source/tools/CMakeLists.txt
@@ -22,12 +22,17 @@ if(_MPIP AND NOT TARGET timemory-cxx-shared)
     set(_MPIP OFF)
 endif()
 
+set(_OMPT ${TIMEMORY_USE_OMPT})
+if(_OMPT AND NOT TARGET timemory-cxx-shared)
+    set(_OMPT OFF)
+endif()
+
 add_option(TIMEMORY_BUILD_AVAIL "Build the timemory-avail tool" ${TIMEMORY_BUILD_TOOLS})
 add_option(TIMEMORY_BUILD_TIMEM "Build the timem tool" ${TIMEMORY_BUILD_TOOLS})
-add_option(TIMEMORY_BUILD_KOKKOS_TOOLS "Build the kokkos-tools libraries" OFF) # still dev
+add_option(TIMEMORY_BUILD_KOKKOS_TOOLS "Build the kokkos-tools libraries" ${TIMEMORY_BUILD_TOOLS}) # still dev
 add_option(TIMEMORY_BUILD_DYNINST_TOOLS "Build the timemory-run dynamic instrumentation tool" ${_DYNINST})
 add_option(TIMEMORY_BUILD_MPIP_LIBRARY "Build the mpiP library" ${_MPIP})
-add_option(TIMEMORY_BUILD_OMPT_LIBRARY "Build the OMPT library" ${_MPIP})
+add_option(TIMEMORY_BUILD_OMPT_LIBRARY "Build the OMPT library" ${_OMPT})
 
 if(TIMEMORY_BUILD_MPIP_LIBRARY AND (NOT TARGET timemory-cxx-shared OR NOT TIMEMORY_USE_MPI))
     message(AUTHOR_WARNING "TIMEMORY_BUILD_MPIP_LIBRARY requires BUILD_SHARED_LIBS=ON and TIMEMORY_USE_MPI=ON...")
