Dynamic instr fixes + spack + func renaming
- Renamed {init,stop,register,deregister}_timemory_{mpip,ompt} to timemory_{start,stop,register,deregister}_{mpip,ompt}
- popen instead of system
- spack updates
- stable instrumentation for runtime instr and binary-rewriting
- verified '--mpi', '--mpip', and '--ompt' modes

--- a/examples/ex-optional/CMakeLists.txt
+++ b/examples/ex-optional/CMakeLists.txt
@@ -5,21 +5,20 @@ project(timemory-Optional-Example LANGUAGES C CXX)
 find_package(timemory REQUIRED COMPONENTS compile-options analysis-tools
     OPTIONAL_COMPONENTS cxx shared)
 
-if(TARGET timemory-ompt)
-    set(_OMP timemory-ompt)
-elseif(TARGET timemory::timemory-ompt)
-    set(_OMP timemory::timemory-ompt)
-else()
-    find_package(OpenMP QUIET)
-    if(OpenMP_FOUND)
-        set(_OMP OpenMP::OpenMP_CXX)
-    endif()
+find_package(OpenMP QUIET)
+if(OpenMP_FOUND)
+    list(APPEND _OMP OpenMP::OpenMP_CXX)
 endif()
 
+find_package(MPI QUIET)
 if(TARGET timemory-mpi)
     set(_MPI timemory-mpi)
 elseif(TARGET timemory::timemory-mpi)
     set(_MPI timemory::timemory-mpi)
+endif()
+if(MPI_FOUND)
+    list(APPEND _MPI MPI::MPI_CXX)
+    target_compile_definitions(MPI::MPI_CXX INTERFACE TIMEMORY_USE_MPI)
 endif()
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/*.cpp ${PROJECT_SOURCE_DIR}/*.hpp)
