--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -300,10 +300,10 @@ if(TARGET timemory-ompt-shared)
     list(APPEND TIMEMORY_TOOL_LIBRARIES timemory-ompt-shared)
 endif()
 
-if(TARGET timemory-mpip)
+if(TARGET timemory-mpip-shared)
     target_compile_definitions(timemory-mpip-library INTERFACE TIMEMORY_USE_MPIP_LIBRARY)
-    target_link_libraries(timemory-mpip-library INTERFACE timemory-mpip)
-    list(APPEND TIMEMORY_TOOL_LIBRARIES timemory-mpip)
+    target_link_libraries(timemory-mpip-library INTERFACE timemory-mpip-shared)
+    list(APPEND TIMEMORY_TOOL_LIBRARIES timemory-mpip-shared)
 else()
     inform_empty_interface(timemory-mpip-library "MPIP standalone instrumentation library")
 endif()
