--- a/source/timemory/settings/CMakeLists.txt
+++ b/source/timemory/settings/CMakeLists.txt
@@ -8,7 +8,7 @@ build_intermediate_library(
     NAME                settings
     TARGET              settings
     CATEGORY            GLOBAL
-    FOLDER              global
+    FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
     PROPERTY_DEPENDS    GLOBAL)
