--- a/source/timemory/storage/CMakeLists.txt
+++ b/source/timemory/storage/CMakeLists.txt
@@ -6,7 +6,7 @@ build_intermediate_library(
     NAME                storage
     TARGET              storage
     CATEGORY            EXTERN
-    FOLDER              extern
+    FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
     PROPERTY_DEPENDS    GLOBAL COMPONENT USER_BUNDLE)
