--- a/source/timemory/hash/CMakeLists.txt
+++ b/source/timemory/hash/CMakeLists.txt
@@ -7,7 +7,7 @@ build_intermediate_library(
     NAME                hash
     TARGET              hash
     CATEGORY            GLOBAL
-    FOLDER              global
+    FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
     PROPERTY_DEPENDS    GLOBAL)
