--- a/source/timemory/plotting/CMakeLists.txt
+++ b/source/timemory/plotting/CMakeLists.txt
@@ -6,7 +6,7 @@ build_intermediate_library(
     NAME                plotting
     TARGET              plotting
     CATEGORY            GLOBAL
-    FOLDER              global
+    FOLDER              components
     HEADERS             ${header_files}
     SOURCES             ${source_files}
     PROPERTY_DEPENDS    GLOBAL)
