Finished removal of base class requirements, argparse fixes, timemory-run module-{include,exclude} fixes
- Makefile generation fix
- flto-thin
- argparse fixes and tests
- crtp::base methods that remove the rest of base class requirements from math::plus, math::minus, start, stop
- preinit function call for storage_initializer
- timemory-run fixes for module-{exclude,include}

--- a/source/tests/CMakeLists.txt
+++ b/source/tests/CMakeLists.txt
@@ -64,6 +64,11 @@ if(TARGET custom-record-functions)
         LINK_LIBRARIES  custom-record-functions)
 endif()
 
+add_timemory_google_test(argparse_tests
+    SOURCES         argparse_tests.cpp
+    LINK_LIBRARIES  timemory-headers timemory-compile-options timemory-develop-options
+                    timemory-analysis-tools)
+
 add_timemory_google_test(flat_tests
     DISCOVER_TESTS
     SOURCES         flat_tests.cpp
