--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -34,7 +34,7 @@ add_library(libpytimemory MODULE ${CMAKE_CURRENT_LIST_DIR}/libpytimemory.cpp
 target_include_directories(libpytimemory SYSTEM PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/pybind11/include>)
 
-target_link_libraries(libpytimemory PUBLIC
+target_link_libraries(libpytimemory PRIVATE
     timemory-headers
     timemory-cxx-shared
     timemory-compile-options
