--- a/cmake/Templates/timemory-config.cmake.in
+++ b/cmake/Templates/timemory-config.cmake.in
@@ -1,5 +1,5 @@
 # Don't allow cmake older than 3.11 to use this configuration
-cmake_minimum_required(VERSION 3.11 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
 foreach(_VAR ROOT_DIR INCLUDE_DIR LIB_DIR PYTHON_DIR INCLUDE_DIRS MISSING_COMPONENTS
     FOUND_COMPONENTS LIBRARIES LIBRARY_FOUND SHARED_LIBRARY_FOUND STATIC_LIBRARY_FOUND
@@ -275,8 +275,9 @@ if(TIMEMORY_BUILD_INTERFACE_LIBRARY)
         set(_INTERFACE_LIB ${@PROJECT_NAME@_INTERFACE_LIBRARY})
     endif()
 
-    add_library(${_INTERFACE_LIB} INTERFACE IMPORTED)
-    target_include_directories(${_INTERFACE_LIB} INTERFACE ${@PROJECT_NAME@_INCLUDE_DIRS})
+    if(NOT TARGET ${_INTERFACE_LIB})
+        add_library(${_INTERFACE_LIB} INTERFACE IMPORTED)
+    endif()
 endif()
 
 # if build interface library is enabled and COMPONENTS were specified
@@ -290,6 +291,9 @@ if(NOT "${@PROJECT_NAME@_FIND_COMPONENTS}" STREQUAL "" AND TIMEMORY_BUILD_INTERF
         include(${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-target-extract.cmake)
     endif()
 
+    # message(STATUS "library: '${_INTERFACE_LIB}' including '${@PROJECT_NAME@_INCLUDE_DIR}'")
+    # target_include_directories(${_INTERFACE_LIB} INTERFACE ${@PROJECT_NAME@_INCLUDE_DIRS})
+    # target_link_directories(${_INTERFACE_LIB} INTERFACE ${@PROJECT_NAME@_LIB_DIR})
 endif()
 
 
